--- a/public/index.html
+++ b/public/index.html
@@ -35,23 +35,26 @@
 				<div class="well sidebar-nav todoLists">
 					<ul class="nav nav-list">
 						<li><select class="span10" id="dropdownLists">
-							<option selected="selected">Lista 1</option>
+							<option>Lista 1</option>
 							<option>Lista 2</option>
 							<option>Lista 3</option>
 							<option>Lista 4</option>
 							<option>Lista 5</option>
 						</select></li>
-						<li class="active activeList"><a href="#">Lista 1</a><li>
-						<li><a href="#">Lista 2</a><li>
-						<li><a href="#">Lista 3</a><li>
-						<li><a href="#">Lista 4</a><li>
-						<li><a href="#">Lista 5</a><li>
+						<li><a class="listElement" href="#">Lista 1</a><li>
+						<li><a class="listElement" href="#">Lista 2</a><li>
+						<li><a class="listElement" href="#">Lista 3</a><li>
+						<li><a class="listElement" href="#">Lista 4</a><li>
+						<li><a class="listElement" href="#">Lista 5</a><li>
 					</ul>
 				</div>
 			</div>
-			<div class="span9 taskList">
+			<div class="span9">
 				<div class="span12 page-header padding0 taskListTitle">
 					<h2>Lista 1</h2>
+				</div>
+				<div class="span12 taskList">
+				
 				</div>
 			</div>
 			<!-- Modal -->
