--- a/public/index.html
+++ b/public/index.html
@@ -31,37 +31,22 @@
 			</div>
 		</div>
 		<div class="row-fluid">
-			<div class="span3">
+			<div class="span2">
 				<div class="well sidebar-nav todoLists">
-					<ul class="nav nav-list">
-						<li><select class="span10" id="dropdownLists">
-							<option>Lista 1</option>
-							<option>Lista 2</option>
-							<option>Lista 3</option>
-							<option>Lista 4</option>
-							<option>Lista 5</option>
-						</select></li>
-						<li><a class="listElement" href="#">Lista 1</a><li>
-						<li><a class="listElement" href="#">Lista 2</a><li>
-						<li><a class="listElement" href="#">Lista 3</a><li>
-						<li><a class="listElement" href="#">Lista 4</a><li>
-						<li><a class="listElement" href="#">Lista 5</a><li>
-					</ul>
+					
 				</div>
 			</div>
-			<div class="span9">
-				<div class="span12 page-header padding0 taskListTitle">
-					<h2>Lista 1</h2>
-				</div>
+			<div class="offset1 span9">
+				<div class="span12 page-header padding0 taskListTitle"></div>
 				<div class="span12 taskList">
 				
 				</div>
 			</div>
 			<!-- Modal -->
-			<div id="taskOptions" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+			<div id="taskOptions" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="taskOptions" aria-hidden="true">
   				<div class="modal-header">
     				<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-    				<h3 id="myModalLabel">Titulo</h3>
+    				<h3 id="taskOptionsLabel">Titulo</h3>
   				</div>
   				<div class="modal-body">
     				<form class="taskOptionsForm form-horizontal">
@@ -96,8 +81,30 @@
     				</form>
   				</div>
   				<div class="modal-footer">
-    				<button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
-    				<button class="btn btn-primary" id="submitButton">Save changes</button>
+  				   	<button class="btn btn-danger pull-left" id="removeButton">Borrar Tarea</button>
+    				<button class="btn" data-dismiss="modal" aria-hidden="true">Cerrar</button>
+    				<button class="btn btn-primary" id="submitButton">Guardar cambios</button>
+  				</div>
+			</div>
+			<!-- Modal -->
+			<div id="newList" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="newList" aria-hidden="true">
+  				<div class="modal-header">
+    				<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+    				<h3 id="newListTitle">Titulo</h3>
+  				</div>
+  				<div class="modal-body">
+    				<form class="taskOptionsForm form-horizontal">
+	    				<div class="control-group">
+		    				<label class="control-label" for="inputName">Nombre</label>
+		    				<div class="controls">
+			    				<input type="text" id="inputName" placeholder="Nombre">
+						    </div>
+	    				</div>
+    				</form>
+  				</div>
+  				<div class="modal-footer">
+    				<button class="btn" data-dismiss="modal" aria-hidden="true">Cerrar</button>
+    				<button class="btn btn-primary" id="submitNewListButton">Guardar</button>
   				</div>
 			</div>
 		</div>
@@ -106,20 +113,34 @@
 		<script src="js/bootstrap.min.js"></script>
 		<script src="js/underscore-min.js"></script>
     	<script src="js/backbone-min.js"></script>
+    	<script type="text/template" id="taskRowTemplate">
+	    	<div class="row-fluid taskRow">
+	    	    <% _.each(tasks, function(task) { %>
+				<a href="#taskOptions" role="button" class="span3 task" data-toggle="modal">
+					<h3><%= task.name %></h3>
+					<h4><%= task.limitDate %></h4>
+				</a>
+				<% }); %>
+			</div>
+    	</script>
+    	<script type="text/template" id="listsNavbar">
+	    	<select class="span10" id="dropdownLists">
+        		<% _.each(lists, function(list) { %>
+				<option><%= list.name %></option>
+				<% }); %>
+			</select>
+			<div class="listsLinks">
+				<ul class="nav nav-list">
+					<% _.each(lists, function(list) { %>
+					<li><a class="listElement" href="#"><%= list.name %></a><li>
+					<% }); %>
+				</ul>
+			</div>
+			<div class="listsAddDelete">
+				<button href="#newList" class="span6 btn btn-primary" data-toggle="modal">Nueva lista</button>
+				<button class="span6 btn btn-danger">Borrar lista</button>
+			</div>
+    	</script>
     	<script src="js/general.js"></script>
-    	<script type="text/template" class="taskTemplate">
-	    	<a href="#taskOptions" role="button" class="span3 task" data-toggle="modal">
-          		<h3>rc.taskName</h3>
-          		<% if(rc.taskLimitDate!="00/00/00"){%>
-          			<h4>rc.taskLimitDate</h4>
-          		<% } %> 
-   			</a>
-    	</script>
-    	<script type="text/template" class="taskRow">
-	    	<a href="#taskOptions" role="button" class="span3 task" data-toggle="modal">
-          		<div class="row-fluid taskRow">
-          		</div>
-   			</a>
-    	</script>
 	</body>
 </html>
