--- a/public/prueba.html
+++ b/public/prueba.html
@@ -149,8 +149,9 @@
                 <ul class="thumbnails">
                     <li class="span2">
                         <a href="#" class="thumbnail task completed">
-                            <h3>Tarea</h3>
-                            <h4>dess</h4>
+                            <div>
+                            <span><h2>Hola</h2></span>
+                                </div>
                         </a>
                     </li>
                     <li class="span2">
@@ -185,8 +186,7 @@
                     </li>
                     <li class="span2">
                         <a href="#" class="thumbnail task">
-                            <h3>Tarea</h3>
-                            <h4>dess</h4>
+                            <i class="icon-big-plus"></i>
                         </a>
                     </li>
 
