Funcionando operaciones de Creado y borrado de listas y tareas y modificado de tareas
Proximo paso, Uso de servicio para obtención de datos

--- a/public/index.html
+++ b/public/index.html
@@ -79,9 +79,9 @@
 						    </div>
 	    				</div>
 	    				<div class="control-group">
-		    				<label class="control-label" for="completedInput">Completado</label>
+		    				<label class="control-label" for="inputCompleted">Completado</label>
 		    				<div class="controls">
-			    				<input type="checkbox" id="completedInput">
+			    				<input type="checkbox" id="inputCompleted">
 						    </div>
 	    				</div>
     				</form>
@@ -101,9 +101,9 @@
   				<div class="modal-body">
     				<form class="newListForm form-horizontal">
 	    				<div class="control-group">
-		    				<label class="control-label" for="inputName">Nombre</label>
+		    				<label class="control-label" for="inputListName">Nombre</label>
 		    				<div class="controls">
-			    				<input type="text" id="inputName" placeholder="Nombre">
+			    				<input type="text" id="inputListName" placeholder="Nombre">
 						    </div>
 	    				</div>
     				</form>
