--- a/public/prueba.html
+++ b/public/prueba.html
@@ -44,51 +44,10 @@
                     <span class="icon-bar"></span>
                 </a>
                 <a class="brand" href="#">TODOList</a>
-
-                <div class="nav-collapse">
-                    <ul class="nav">
-                        <li class="active">
-                            <a href="#">Home</a>
-                        </li>
-                        <li>
-                            <a href="#">Link</a>
-                        </li>
-                        <li>
-                            <a href="#">Link</a>
-                        </li>
-                        <li>
-                            <a href="#">Link</a>
-                        </li>
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                Dropdown
-                                <b class="caret"></b>
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li>
-                                    <a href="#">Action</a>
-                                </li>
-                                <li>
-                                    <a href="#">Another action</a>
-                                </li>
-                                <li>
-                                    <a href="#">Something else here</a>
-                                </li>
-                                <li class="divider"></li>
-                                <li class="nav-header">Nav header</li>
-                                <li>
-                                    <a href="#">Separated link</a>
-                                </li>
-                                <li>
-                                    <a href="#">One more separated link</a>
-                                </li>
-                            </ul>
-                        </li>
-                    </ul>
                     <ul class="nav pull-right">
 
                         <li>
-                            <a href="#">Register</a>
+                            <a href="#">Registrate</a>
                         </li>
                         <li class="divider-vertical"></li>
 
@@ -110,110 +69,135 @@
     <div class="row">
         <div class="span3">
             <div class="sidewell todoLists">
-
-                <div class="input-prepend">
-                    <span class="add-on"><i class="icon-envelope"></i></span>
-                <select id="dropdownLists">
-
-                    <option>List1</option>
-
-                    <option>List2</option>
-
-                </select>
-                    </div>
-
-                <div class="listsLinks">
-                    <ul class="nav nav-tabs nav-stacked" style="color:white; background:white;">
-
-                        <li class="active"><a class="listElement" href="#">List1</a></li>
-                        <li>
-
-                        </li>
-                        <li><a class="listElement" href="#">List2</a></li>
-                        <li>
-
-                        </li>
-                    </ul>
-                </div>
-                <div class="listsAddDelete">
-                    <button href="#newList" class="btn btn-primary pull-left" data-toggle="modal">Nueva lista</button>
-                    <button class="btn btn-danger pull-right">Borrar lista</button>
-                </div>
+                <div class="listsAddDelete"></div>
             </div>
-
         </div>
         <div class="span9">
-            <div class="well todoLists" style="padding-left:30px;">
-                <h1>Tasks</h1>
-                <hr>
-                <ul class="thumbnails">
-                    <li class="span2">
-                        <a href="#" class="thumbnail task completed">
-                            <div>
-                            <span><h2>Hola</h2></span>
-                                </div>
-                        </a>
-                    </li>
-                    <li class="span2">
-                        <a href="#" class="thumbnail task incompleted">
-                            <h3>Tarea</h3>
-                            <h4>dess</h4>
-                        </a>
-                    </li>
-                    <li class="span2">
-                        <a href="#" class="thumbnail task expired">
-                            <h3>Tarea</h3>
-                            <h4>dess</h4>
-                        </a>
-                    </li>
-                    <li class="span2">
-                        <a href="#" id="newTask" class="thumbnail task">
-                            <h3>Tarea</h3>
-                            <h4>dess</h4>
-                        </a>
-                    </li>
-                    <li class="span2">
-                        <a href="#" class="thumbnail task">
-                            <h3>Tarea</h3>
-                            <h4>dess</h4>
-                        </a>
-                    </li>
-                    <li class="span2">
-                        <a href="#" class="thumbnail task">
-                            <h3>Tarea</h3>
-                            <h4>dess</h4>
-                        </a>
-                    </li>
-                    <li class="span2">
-                        <a href="#" class="thumbnail task">
-                            <i class="icon-big-plus"></i>
-                        </a>
-                    </li>
-
-
-
-                </ul>
+            <div class="well todoTasks">
+                <div class="row-fluid">
+                    <div id="taskListTitle"></div>
+                    <div id="taskList"></div>
+                </div>
             </div>
-
-
-            <hr>
-
-            <div style="text-align: center;"><p>
-
-                <a href="#" class="medium green button radius"> load more...</a>
-
-
-            </p></div>
         </div>
     </div>
+    <div id="taskOptions" class="modal hide fade" tabindex="-1" role="dialog"
+         aria-labelledby="taskOptions" aria-hidden="true">
+        <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+            <h3 id="taskOptionsLabel">Titulo</h3>
+        </div>
+        <div class="modal-body">
+            <form class="taskOptionsForm form-horizontal">
+                <div class="control-group">
+                    <label class="control-label" for="inputTitle">Título</label>
+
+                    <div class="controls">
+                        <input type="text" id="inputTitle" placeholder="Titulo">
+                    </div>
+                </div>
+                <div class="control-group">
+                    <label class="control-label" for="inputDescription">Descripción</label>
+
+                    <div class="controls">
+                        <textarea rows="3" id="inputDescription" placeholder="Descripcion"></textarea>
+                    </div>
+                </div>
+                <div class="control-group">
+                    <label class="control-label" for="inputLimitDate">Fecha Límite</label>
+
+                    <div class="controls">
+                        <input type="text" class="span2" id="inputLimitDay" placeholder="0" size="1"
+                               maxlength="2" max="31">
+                        <input type="text" class="span2" id="inputLimitMonth" placeholder="0" size="1"
+                               maxlength="2" max="12">
+                        <input type="text" class="span2" id="inputLimitYear" placeholder="0" size="1"
+                               maxlength="2">
+                        (0/0/0=sin fecha limite)
+                    </div>
+                </div>
+                <div class="control-group">
+                    <label class="control-label" for="inputExpectedDays">Dias esperados</label>
+
+                    <div class="controls">
+                        <input type="text" class="span3" id="inputExpectedDays" placeholder="0">
+                        dias (0=sin dias esperados)
+                    </div>
+                </div>
+                <div class="control-group">
+                    <label class="control-label" for="inputCompleted">Completado</label>
+
+                    <div class="controls">
+                        <input type="checkbox" id="inputCompleted">
+                    </div>
+                </div>
+            </form>
+        </div>
+        <div class="modal-footer">
+            <a class="btn btn-danger pull-left" id="removeButton">Borrar Tarea</a>
+            <a class="btn" data-dismiss="modal" aria-hidden="true">Cerrar</a>
+            <a class="btn btn-primary" id="submitButton">Guardar cambios</a>
+        </div>
+    </div>
+    <!-- Modal -->
+    <div id="newList" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="newList"
+         aria-hidden="true">
+        <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+            <h3 id="newListTitle">Introduzca el nombre de la nueva lista</h3>
+        </div>
+        <div class="modal-body">
+            <form class="newListForm form-horizontal">
+                <div class="control-group">
+                    <label class="control-label" for="inputListName">Nombre</label>
+
+                    <div class="controls">
+                        <input type="text" id="inputListName" placeholder="Nombre">
+                    </div>
+                </div>
+            </form>
+        </div>
+        <div class="modal-footer">
+            <button class="btn" data-dismiss="modal" aria-hidden="true">Cerrar</button>
+            <button class="btn btn-primary" id="submitNewListButton">Guardar</button>
+        </div>
+    </div>
+    <!-- Modal -->
+    <div id="newTaskModal" class="modal hide fade" tabindex="-1" role="dialog"
+         aria-labelledby="newTaskModal" aria-hidden="true">
+        <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+            <h3 id="newTaskTitle">Indroduzca el nombre de nueva tarea</h3>
+        </div>
+        <div class="modal-body">
+            <form class="newTaskForm form-horizontal">
+                <div class="control-group">
+                    <label class="control-label" for="inputTaskName">Nombre</label>
+
+                    <div class="controls">
+                        <input type="text" id="inputTaskName" placeholder="Nombre">
+                    </div>
+                </div>
+            </form>
+        </div>
+        <div class="modal-footer">
+            <button class="btn" data-dismiss="modal" aria-hidden="true">Cerrar</button>
+            <button class="btn btn-primary" id="submitNewTaskButton">Guardar</button>
+        </div>
+    </div>
+    <div style="text-align: center;"><p>
+
+        <a href="#" class="medium green button radius"> Cargar más...</a>
 
 
+    </p>
+    </div>
 </div>
 
 
-<div class="container" style="padding:30px;">
+<div class="container-fluid" style="padding:30px;">
 
-    <div class="row">
+    <div class="row-fluid">
         <div class="span10">.</div>
         <div class="span2">
         </div>
@@ -226,14 +210,51 @@
 <!-- /container -->
 <footer>
     <div class="footerblk">
-        <p style="padding:20px;">© 2012 <b> Trublu Template</b><span class="pull-right">tb factory</span></p>
+        <p style="padding:20px;">© 2012 <b> TodoList</b><span class="pull-right">IS2</span></p>
     </div>
 </footer>
-<!-- Le javascript
-================================================== -->
-<!-- Placed at the end of the document so the pages load faster -->
-<script src="js/jquery-1.4.2.min.js"></script>
-<script src="js/bootstrap.js"></script>
+<script src="http://code.jquery.com/jquery-latest.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<script src="js/underscore-min.js"></script>
+<script src="js/backbone-min.js"></script>
+<script type="text/template" id="taskRowTemplate">
+    <ul class="thumbnails">
+        <% _.each(tasks, function(task) { %>
+        <li class="span2">
+            <a href="#taskOptions" role="button" data-name=<%= task.name %> class="thumbnail task completed" data-toggle="modal">
+            <h3><%= task.name %></h3>
+            <h4><%= task.limitDate %></h4>
+            </a>
+        </li>
+        <% }); %>
+        <li class="span2">
+            <a href="#" class="thumbnail task">
+                <br/>
+                <i class="icon-big-plus"></i>
+            </a>
+        </li>
+        </ul>
+</script>
+<script type="text/template" id="listsNavbar">
+    <select class="span10" id="dropdownLists">
+        <% _.each(lists, function(list) { %>
+        <option><%= list.name %></option>
+        <% }); %>
+    </select>
 
+    <div class="listsLinks">
+        <ul class="nav nav-list">
+            <% _.each(lists, function(list) { %>
+            <li><a class="listElement" href="#"><%= list.name %></a>
+            <li>
+                <% }); %>
+        </ul>
+    </div>
+    <div class="listsAddDelete">
+        <button href="#newList" class="btn btn-primary pull-left" data-toggle="modal">Nueva lista</button>
+        <button id="deleteList" class="btn btn-danger pull-right">Borrar lista</button>
+    </div>
+</script>
+<script src="js/general.js"></script>
 </body>
 </html>
