--- a/public/index.html
+++ b/public/index.html
@@ -236,7 +236,7 @@
         </div>
         <% }); %>
     <div class="box">
-        <div href="#taskOptions" role="button" class="task completed"
+        <div href="#newTaskModal" role="button" class="task completed"
         data-toggle="modal">
         <div>
             <h1 style="font-size : 50px;">+</h1>
