--- a/public/index.html
+++ b/public/index.html
@@ -47,11 +47,11 @@
                 <ul class="nav pull-right">
 
                     <li>
-                        <a href="#">Registrate</a>
+                        <a href="register">Registrate</a>
                     </li>
                     <li class="divider-vertical"></li>
 
-                    <li><a href="#">Logout</a></li>
+                    <li><a href="/logout">Logout</a></li>
                 </ul>
             </div>
             <!-- /.nav-collapse -->
