--- a/public/index.html
+++ b/public/index.html
@@ -202,8 +202,7 @@
              data-name="<%= task.name%>" class="task-desc task"
              data-toggle="modal">
             <div class="favoritesCont">
-                <div class="name"><%= task.name %></div>
-                <div class="favicon"></div>
+                <div class="name"><%= task.name %><span class="favicon pull-right"></span> </div>
             </div>
             <div class="desc"><%= task.description %></div>
         </div>
