--- a/public/index.html
+++ b/public/index.html
@@ -250,7 +250,7 @@
 <script>
     var socket = io.connect('http://localhost');
     socket.on('ready',function(){
-        console.log('emitir');
+        socket.on
         socket.emit('newTask', {user : 'fer', taskList : ["44234","fdsfsf"]});
     });
 
