--- a/public/index.html
+++ b/public/index.html
@@ -40,28 +40,9 @@
                             <a class="dropdown-toggle" data-toggle="dropdown" href="#about"><i
                                     class="icon-envelope icon-white"></i> Notificaciones <span id="num-notifications"
                                                                                                class="badge badge-important">0</span></a>
-                            <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
-                                <li class="notification">
-                                    <a style="width: 400px">
-                                        <div style="background: wheat;"><b>Fernando</b></div>
-                                        <p class="description">Te ha enviado una tarea lalal jajaj</p>
-                                        <p>
-                                            <button class="btn btn-mini btn-primary" type="button">Mini button</button>
-                                            <button class="btn btn-mini btn-danger" type="button">Mini button</button>
-                                        </p>
-                                    </a>
-                                </li>
-                                <li class="notification">
-                                    <a style="width: 400px">
-                                        <div style="background: wheat;"><b>Fernando</b></div>
-                                        <p class="description">Te ha enviado una tarea lalal jajaj</p>
-                                        <p>
-                                            <button class="btn btn-mini btn-primary" type="button">Mini button</button>
-                                            <button class="btn btn-mini btn-danger" type="button">Mini button</button>
-                                        </p>
-                                    </a>
-                                </li>
-                            </ul>
+
+                            <div id="bar-notifications" class="dropdown-menu comprimed" role="menu"
+                                 aria-labelledby="dLabel"></div>
                         </li>
                         <li class="divider-vertical"></li>
 
@@ -265,6 +246,31 @@
         </div>
     </div>
 </script>
+<script type="text/template" id="notificationList">
+    <ul id="notifications-list">
+        <% _.each(notifications, function(notification) { %>
+        <li class="notification">
+            <a style="width: 400px">
+                <div style="background: wheat;"><b><%= notification.user %></b></div>
+                <p class="description">Te ha enviado una lista de tareas</p>
+
+                <p>
+                    <% _.each(notification.taskList,function(task){ %>
+                    <span class="label label-info"><%= task %></span>
+                    <% }); %>
+                </p>
+
+                <p>
+                    <button class="btn btn-mini btn-primary tiny accept" type="button">Aceptar
+                    </button>
+                    <button class="btn btn-mini btn-danger tiny cancel" type="button">Rechazar
+                    </button>
+                </p>
+            </a>
+        </li>
+        <% }); %>
+    </ul>
+</script>
 <script src="js/jquery.gritter.min.js"></script>
 <script src="js/general.js"></script>
 <script src="js/bootstrap.js"></script>
@@ -277,34 +283,68 @@
 </script>
 <script src="/socket.io/socket.io.js"></script>
 <script>
-    var socket = io.connect('http://192.168.1.59:3000');
+    var socket = io.connect('http://localhost');
     $('#num-notifications').click(function () {
-        socket.emit('newTask', {user: 'peneanal', taskList: ["44234", "fdsfsf"]});
+        //socket.emit('newTask', {user:'peneanal', taskList:["44234", "fdsfsf"]});
     });
-    socket.on('notification', function (notifications) {
-        console.log(notifications);
-        if (notifications.length > 0) {
-            newNotification(notifications.length);
+
+    var notifications = [];
+
+    socket.on('notification', function (notis) {
+        notifications = notis;
+        if (notis.length > 0) {
+            newNotification(notis.length);
         }
-        $('#num-notifications').text(notifications.length);
+        updateBar();
+        updateContent();
+        updateHandler();
     });
+
+    function updateBar() {
+        $('#num-notifications').text(notifications.length);
+    }
+
+    function updateContent() {
+        var template = _.template($("#notificationList").html(), {notifications:notifications});
+        console.log(template);
+        $('#bar-notifications').append(template);
+    }
+
+    function updateHandler() {
+        $('#notifications-list li button').click(function () {
+            var index = $(this).parents('li').index();
+            var ObjID = notifications[index].listId;
+            console.log('dsfsf')
+            if ($(this).hasClass('accept')) {
+                console.log('true');
+            }
+            else {
+                socket.emit('deleteList', ObjID);
+                notifications.splice(index, 1);
+                $(this).parents('.notification').remove();
+                updateBar();
+                updateContent();
+                updateHandler()
+            }
+        });
+    }
 </script>
 
 <script>
     function newNotification(numNot) {
         var unique_id = $.gritter.add({
             // (string | mandatory) the heading of the notification
-            title: 'Tienes notificaciones nuevas',
+            title:'Tienes notificaciones nuevas',
             // (string | mandatory) the text inside the notification
-            text: numNot + ((numNot > 1) ? ' usuarios te enviaron un conjunto de tareas.' : ' usuario te envió un conjunto de tareas'),
+            text:numNot + ((numNot > 1) ? ' usuarios te enviaron un conjunto de tareas.' : ' usuario te envió un conjunto de tareas'),
             // (string | optional) the image to display on the left
-            image: 'img/notification.png',
+            image:'img/notification.png',
             // (bool | optional) if you want it to fade out on its own or just sit there
-            sticky: false,
+            sticky:false,
             // (int | optional) the time you want it to be alive for before fading out
-            time: '4000',
+            time:'4000',
             // (string | optional) the class name you want to apply to that specific message
-            class_name: 'my-sticky-class'
+            class_name:'my-sticky-class'
         });
     }
 </script>
