--- a/public/index.html
+++ b/public/index.html
@@ -282,7 +282,7 @@
 
 </script>
 <script src="/socket.io/socket.io.js"></script>
-<script>
+<script type="text/javascript">
     var socket = io.connect('http://localhost');
     $('#num-notifications').click(function () {
         //socket.emit('newTask', {user:'peneanal', taskList:["44234", "fdsfsf"]});
@@ -307,14 +307,13 @@
     function updateContent() {
         var template = _.template($("#notificationList").html(), {notifications:notifications});
         console.log(template);
-        $('#bar-notifications').append(template);
+        $('#bar-notifications').html(template);
     }
 
     function updateHandler() {
         $('#notifications-list li button').click(function () {
             var index = $(this).parents('li').index();
             var ObjID = notifications[index].listId;
-            console.log('dsfsf')
             if ($(this).hasClass('accept')) {
                 console.log('true');
             }
