Eliminado Dropdown menu para listas, Arreglado estado completado de tareas, División de javascript en ficheros models y views, primera inclusión de modelo de mapas de listas

--- a/public/index.html
+++ b/public/index.html
@@ -230,12 +230,6 @@
 </script>
 <script type="text/template" id="listsNavbar">
     <div class="tall" style="padding:10px">
-        <select class="span10" id="dropdownLists">
-            <% _.each(lists, function(list) { %>
-            <option><%= list.name %></option>
-            <% }); %>
-        </select>
-
         <div class="listsLinks">
             <ul class="nav nav-list">
                 <% _.each(lists, function(list) { %>
@@ -272,6 +266,8 @@
     </ul>
 </script>
 <script src="js/jquery.gritter.min.js"></script>
+<script src="js/views.js"></script>
+<script src="js/models.js"></script>
 <script src="js/general.js"></script>
 <script src="js/bootstrap.js"></script>
 <script type="text/javascript">
